# simpleeventbus

./: .gitignore  CMakeLists.txt  FindSimpleEventBus.cmake  README.md  libsimpleeventbus.pc.in
src/example/: CMakeLists.txt  Example.cpp
src/include/simpleeventbus/: EventBus.h
src/test/: CMakeLists.txt  EventBusTest.cpp
